--- a/public/css/root.css
+++ b/public/css/root.css
@@ -1,8 +1,8 @@
 /* ----------------- 🎨 GLOBAL COLORS ----------------- */
 :root {
     /* Màu chính pastel */
-    --main-light: #f7d3a2;             /* nền dịu */
-    --main-accent: #fcb69f;            /* điểm nhấn */
+    --main-light: #f6ca8c;             /* nền dịu */
+    --main-accent: #f4a88e;            /* điểm nhấn */
     --main-accent-hover: #f1754b;      /* hover */
 
     /* Màu chữ */
